kube-manifests/dev/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: akeyless-api-gateway
  namespace: akeyless
  labels:
    app.kubernetes.io/name: akeyless-api-gateway
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: akeyless-api-gateway
      app.kubernetes.io/instance: akeyless
  template:
    metadata:
      labels:
        app.kubernetes.io/name: akeyless-api-gateway
        app.kubernetes.io/instance: akeyless
    spec:
      containers:
        - name: api-gateway
          image: "akeyless/base:0.3.5"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 18888
              name: web
            - containerPort: 8000
              name: configure-app
            - containerPort: 8080
              name: legacy-api
            - containerPort: 8081
              name: api
            - containerPort: 8200
              name: hvp
          livenessProbe:
            httpGet:
              path: /status
              port: 18888
            failureThreshold: 10
            initialDelaySeconds: 120
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /status
              port: 18888
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            {}
