kube-manifests/dev/injection-deployment.yaml
# Source: akeyless-secrets-injection/templates/webhook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: akeyless-secrets-injection
  namespace: akeyless
  labels:
    app: akeyless-secrets-injection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: akeyless-secrets-injection
  template:
    metadata:
      labels:
        app: akeyless-secrets-injection
      annotations:
        checksum/config: 69d4ba8465ff9fbcc012478173fc7545a7642d1a4ec5b3b4936d73e34112401b
    spec:
      serviceAccountName: akeyless-secrets-injection
      volumes:
      - name: serving-cert
        secret:
          defaultMode: 420
          secretName: akeyless-secrets-injection
      containers:
        - name: akeyless-secrets-injection
          image: "akeyless/k8s-webhook-server:0.2.2"
          imagePullPolicy: Always
          ports:
            - containerPort: 8443
          volumeMounts:
          - mountPath: /var/serving-cert
            name: serving-cert
          securityContext: #//only for k8s - not openshift compatible
            runAsUser: 65534
            allowPrivilegeEscalation: false
          resources:
            limits:
              cpu: 0.5
              memory: 192Mi
            requests:
              cpu: 0.25
              memory: 128Mi
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels:
                  app: akeyless-secrets-injection
