kube-manifests/dev/gateway-svc.yaml
# Source: akeyless-api-gateway/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: akeyless-api-gateway
  namespace: akeyless
  labels:
    app.kubernetes.io/name: akeyless-api-gateway
    app.kubernetes.io/instance: akeyless
  annotations:
    {}
spec:
  clusterIP: None
  ports:
    - port: 18888
      targetPort: 18888
      protocol: TCP
      name: http
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: config
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: legacy-api
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: api
    - port: 8200
      targetPort: 8200
      protocol: TCP
      name: hvp
  selector:
    app.kubernetes.io/name: akeyless-api-gateway
    app.kubernetes.io/instance: akeyless
