kube-manifests/dev/injection-svc.yaml
# Source: akeyless-secrets-injection/templates/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: akeyless-secrets-injection
  namespace: akeyless
  labels:
    app: akeyless-secrets-injection
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 8443
      protocol: TCP
      name: secrets-webhook
  selector:
    app: akeyless-secrets-injection
