kube-manifests/dev/injection-list.yaml
# Source: akeyless-secrets-injection/templates/apiservice-webhook.yaml
apiVersion: v1
kind: List
metadata:
items:

- apiVersion: v1
  kind: Secret
  metadata:
    name: akeyless-secrets-injection
    namespace: akeyless
  data:
    servingCert: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURhakNDQWxLZ0F3SUJBZ0lSQU1zZFZvYk1mYThvSjZ3aGthK3pxeDR3RFFZSktvWklodmNOQVFFTEJRQXcKRlRFVE1CRUdBMVVFQXhNS2MzWmpMV05oZEMxallUQWVGdzB5TVRBMU1qVXhOelU0TXpkYUZ3MHlNakExTWpVeApOelU0TXpkYU1ESXhNREF1QmdOVkJBTVRKMkZyWlhsc1pYTnpMWE5sWTNKbGRITXRhVzVxWldOMGFXOXVMbUZyClpYbHNaWE56TG5OMll6Q0NBU0l3RFFZSktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCQUttWlRWMWYKM2pLYjFYQVkrQ0cxb1ltMWQ0NU1Ia2N3dEpZWmEyRitlL2hxSlgyWm1nWkg0K3VyTFE5emN0cUdlamhWcG02SApIbHR3d1FNbDF [...]
    servingKey: LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpNSUlFcFFJQkFBS0NBUUVBcVpsTlhWL2VNcHZWY0JqNEliV2hpYlYzamt3ZVJ6QzBsaGxyWVg1NytHb2xmWm1hCkJrZmo2NnN0RDNOeTJvWjZPRldtYm9jZVczREJBeVhWanNOWXgvUXdkVnBmR0hzMVA3UU84U2hYL0pLNW45ajIKUExoa0pSV2tINWNWRXMyVmxaRnNwcVRwSHRtc2VrbzFFazlLdDMrcHgydm1FVHlwY1dPbUVxUG0xSVpnZGt3YQp6dXFjV0piaVlST1llaG5UU0VsYSs2azVNYm5MVXNObkZ6Q2ZDMUIyK0JQTWFWSUtCdzVCb0xzUDhXdnlMWDQxCmdiUnM1L05hNUYwUUF1cnRIUzJlSWMyNG1hSWRrT3lucUlMaDREcG5NeFhuYXk4VjNKa0tKSERSdzIvdHZXaWQKS3QxV00y [...]
    caCert: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGakNDQWY2Z0F3SUJBZ0lSQU5DRDhnamk5cTJOYkpwanh3OXVRVmt3RFFZSktvWklodmNOQVFFTEJRQXcKRlRFVE1CRUdBMVVFQXhNS2MzWmpMV05oZEMxallUQWVGdzB5TVRBMU1qVXhOelU0TXpkYUZ3MHpNVEExTWpNeApOelU0TXpkYU1CVXhFekFSQmdOVkJBTVRDbk4yWXkxallYUXRZMkV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBCkE0SUJEd0F3Z2dFS0FvSUJBUUNnUWhmMHNVSzBZV0YwMUFUVFdZVWtKejdwcDdOOWkxM2ZSYllORElmcFlxRDMKbE5DbmRaeWhzUlZ4eVk3VklUZTh2dnlReUIrMUZXZ2RtT0x5d0xWcTVRTzJwdTV4Q3U1Nm1xeGRLYkZPSjczagpXTmk5YXhnM3JLeUtx [...]

- apiVersion: admissionregistration.k8s.io/v1
  kind: MutatingWebhookConfiguration
  metadata:
    name: akeyless-secrets-injection
    namespace: akeyless
  webhooks:
  - name: pods.akeyless-secrets-injection.admission
    clientConfig:
      service:
        namespace: akeyless
        name: akeyless-secrets-injection
        path: /pods
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGakNDQWY2Z0F3SUJBZ0lSQU5DRDhnamk5cTJOYkpwanh3OXVRVmt3RFFZSktvWklodmNOQVFFTEJRQXcKRlRFVE1CRUdBMVVFQXhNS2MzWmpMV05oZEMxallUQWVGdzB5TVRBMU1qVXhOelU0TXpkYUZ3MHpNVEExTWpNeApOelU0TXpkYU1CVXhFekFSQmdOVkJBTVRDbk4yWXkxallYUXRZMkV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBCkE0SUJEd0F3Z2dFS0FvSUJBUUNnUWhmMHNVSzBZV0YwMUFUVFdZVWtKejdwcDdOOWkxM2ZSYllORElmcFlxRDMKbE5DbmRaeWhzUlZ4eVk3VklUZTh2dnlReUIrMUZXZ2RtT0x5d0xWcTVRTzJwdTV4Q3U1Nm1xeGRLYkZPSjczagpXTmk5YXhnM3JL [...]
    rules:
    - operations:
      - CREATE
      apiGroups:
      - "*"
      apiVersions:
      - "*"
      resources:
      - pods
    failurePolicy: Ignore
    namespaceSelector:
      matchExpressions:
      - key: name
        operator: NotIn
        values:
        - akeyless
    objectSelector:
      matchExpressions:
      - key: release
        operator: NotIn
        values:
        - akeyless-secrets-injection
    admissionReviewVersions: ["v1beta1"]
    sideEffects: None #Unknown
